--- a/index.html
+++ b/index.html
@@ -2,24 +2,33 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>css exercise four</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <header>Modern luxury travel</header>
   </head>
   <body>
     <section class="container">
-      <h1>Modern luxury <span class="emphasis">travel</span></h1>
-      <div class="preview baku">
-        <h1>Baku</h1>
-      </div>
-      <div class="preview london">
+
+    <div class="preview baku">
+      <h1>Baku</h1>
+      <img src= "images/baku.jpg" class="container" alt="travel"/>
+    </div>
+
+    <div class="preview london">
         <h1>London</h1>
+        <img src= "images/london.png" class="container" alt="travel"/>
       </div>
+
       <div class="preview madrid">
         <h1>Madrid</h1>
+        <img src= "images/madrid.jpg" class="container" alt="travel"/>
       </div>
+
       <div class="preview rome">
         <h1>Rome</h1>
+        <img src= "images/rome.jpg" class="container" alt="travel"/>
       </div>
     </section>
   </body>
